--- a/style.css
+++ b/style.css
@@ -1,7 +1,6 @@
 *{
 	margin: 0;
 	padding: 0;
-	text-decoration: none;
 	box-sizing: border-box;
   list-style: none;
 }
@@ -11,64 +10,49 @@ body{
 	color: #545454;
 }
 
-.navbar{
-	width: 100%;
-	height: 60px;
-	position: fixed;
-	top: 0;
-	left: 0;
-	padding: 0 50px;
-	z-index: 10;
+a {
+  text-decoration: none;
+  color: #333;
 }
 
-.navbar .inner_navbar{
-	display: flex;
-	align-items: center;
-	justify-content: space-between;
-	width: 100%;
-	height: 100%;
+
+/* Navbar */
+.navbar {
+  background-color: black;
+  color: #fff;
+  height: 100px;
 }
 
-.navbar .hamburger{
-	display: none;
+.navbar ul {
+  display: flex;
 }
 
-.navbar .logo a{
-	font-weight: 700;
-	font-size: 24px;
-	letter-spacing: 3px;
-	color: white;
+.navbar a {
+  color: #fff;
+  padding: 10px;
+  margin: 0 5px;
 }
 
-.navbar .logo a span{
-	color: rgb(168, 163, 163);
+.navbar a:hover {
+  border-bottom: 2px #fff solid;
 }
 
-.navbar .menu ul{
-	display: flex;
+.container {
+  max-width: 1200px;
+  margin: 0 auto;
+  padding: 0 40px;
+  height: auto;
 }
 
-.navbar .menu ul li a{
-	width: 120px;
-	margin-right: 10px;
-	display: block;
-	text-align: center;
-	padding: 10px;
-	color: #fff;
-	text-transform: uppercase;
-	font-size: 14px;
-	letter-spacing: 1px;
-	transition: all 0.2s ease;
+.navbar .flex {
+  display: flex;
+  justify-content: space-between;
+  height: 100%;
+  align-items: center;
 }
 
-.navbar .menu ul li:last-child a{
-	margin-right: 0;	
-}
 
-.navbar .menu ul li a:hover,
-.navbar .menu ul li a.active{
-	color: rgb(168, 163, 163);
-}
+
 
 .wrapper {
 	height: 100vh;
@@ -313,16 +297,6 @@ body{
 
 
 @media (max-width: 900px){
-	.navbar{
-		height: 100px;
-		padding: 12px;
-	}
-	.navbar .inner_navbar{
-		flex-direction: column;
-	}
-	.main_container{
-		margin-top: 100px;
-    }
     
 
   .boxes {
@@ -333,60 +307,7 @@ body{
 }
 
 @media (max-width: 728px){
-	.navbar{
-		height: 60px;
-	}
-	.navbar .inner_navbar{
-		flex-direction: row;
-	}
-	.main_container{
-		margin-top: 60px;
-	}
-	.navbar .menu ul{
-		position: absolute;
-		top: 60px;
-		left: 0;
-		display: block;
-		width: 100%;
-		background-color: rgb(0, 0, 0);
-		
-		
-	}
-	.navbar .menu ul li{
-		padding: 10px;
-		background-color: rgb(0, 0, 0);
-		transition: all ease 1s;
-		
-	}
-	.navbar .menu ul li a{
-		width: 100%;
-		padding: 12px;
-		background-color: rgb(0, 0, 0);
-	}
-	.navbar .hamburger{
-		display: block;
-		position: absolute;
-		top: 15px;
-		right: 25px;
-		font-size: 24px;
-		color: rgb(192, 192, 192);
-        cursor: pointer;
-		transition: all 0.2s ease;
-	}
-	.navbar .hamburger:hover{
-		color: rgb(168, 163, 163);
-	}
-	.navbar .menu{
-		display: none;
-
-	}
-	.navbar .menu.active{
-		display: block;
-	}
-	.main_container .content .item_wrap{
-		width: 100%;
-
-  }
+	
   
   .wrapper .boxes {
     display: flex;
