--- a/style.css
+++ b/style.css
@@ -66,7 +66,12 @@ a {
 	left: 10%;
 }
 
-.wrapper .mainHeading {
+.threeBoxLayout {
+  height: auto;
+  
+}
+
+.threeBoxLayout .mainHeading {
     max-width: 700px;
     width: 100%;
     padding: 100px 50px 50px;
@@ -77,16 +82,17 @@ a {
     color: white;
   }
   
-  .wrapper .boxes {
+  .threeBoxLayout .boxes {
     width: auto;
-    height: auto;
+    height: fit-content;
     display: flex;
+    flex-direction: row;
     justify-content: center;
     text-align: center;
     flex-wrap: wrap;
   }
   
-  .wrapper .boxes .individualBoxes {
+  .threeBoxLayout .boxes .individualBoxes {
     width: 325px;
     margin: 10px;
     background: #fff;
@@ -95,7 +101,7 @@ a {
     padding: 25px;
   }
   
-  .wrapper .boxes .individualBoxes .individualBoxesImage {
+  .threeBoxLayout .boxes .individualBoxes .individualBoxesImage {
     width: 170px;
     height: 170px;
     background-color: black;
@@ -103,24 +109,24 @@ a {
     margin-bottom: 10px;
   }
   
-  .wrapper .boxes .individualBoxes .boxTitle {
+  .threeBoxLayout .boxes .individualBoxes .boxTitle {
     color: #444;
   }
   
-  .wrapper .boxes .individualBoxes span {
+  .threeBoxLayout .boxes .individualBoxes span {
     font-size: 12px;
     color: #999;
   }
   
-  .wrapper .boxes .individualBoxes p {
+  .threeBoxLayout .boxes .individualBoxes p {
     margin: 15px 0;
   }
   
-  .wrapper .boxes .individualBoxes .btn_grp {
+  .threeBoxLayout .boxes .individualBoxes .btn_grp {
     display: flex;
   }
   
-  .wrapper .boxes .individualBoxes .btn_grp a {
+  .threeBoxLayout .boxes .individualBoxes .btn_grp a {
     background: #ddd;
     display: block;
     width: 125px;
@@ -132,12 +138,12 @@ a {
     transition: all 0.3s ease;
   }
   
-  .wrapper .boxes .individualBoxes .btn_grp a:first-child:hover {
+  .threeBoxLayout .boxes .individualBoxes .btn_grp a:first-child:hover {
     background: black;
     color: #fff;
   }
   
-  .wrapper .boxes .individualBoxes .btn_grp a:last-child:hover {
+  .threeBoxLayout .boxes .individualBoxes .btn_grp a:last-child:hover {
     background: black;
     color: #fff;
   }
@@ -296,23 +302,18 @@ a {
 
 
 
-@media (max-width: 900px){
+@media (max-width: 1040px){
     
 
-  .boxes {
-    display: flex;
-    flex-direction: column;
-  }
 
 }
 
-@media (max-width: 728px){
-	
-  
+@media (max-width: 500px){
+
   .wrapper .boxes {
     display: flex;
     flex-direction: column;
-    height: auto;
+    height: fit-content;
   }
 
 }
