--- a/style.css
+++ b/style.css
@@ -15,10 +15,9 @@ a {
 }
 
 .totalHero {
-  position: relative;
   height: 100vh;
   z-index: -100;
-  background-image: url(/images/blob5.png);
+  background-image: url(/images/blob4.png);
 	background-position: center;
 	background-repeat: no-repeat;
   background-size: cover;
@@ -29,18 +28,25 @@ a {
 /* Navbar */
 .navbar {
   background-color: rgba(0, 0, 0, 0);
-  color:white;
   height: 70px;
   z-index: 100;
+  
 }
 
 .navbar .logo {
   padding-left: 10px;
+  font-family: 'Raleway', sans-serif;
+  text-transform: uppercase;
+  font-weight: 700;
+  font-size: 1.75rem;
+  letter-spacing: 0.17em;
+  color:rgb(255, 255, 255);
 }
 
 .navbar ul {
   display: flex;
   padding-right: 20px;
+  font-family: 'Roboto', sans-serif;
 }
 
 .navbar a {
@@ -76,14 +82,57 @@ a {
 
 .totalHero .hero-text {
 	position: absolute;
-	bottom: 55%;
+	bottom: 35%;
   color: white;
   padding-left: 10px;
+
 }
+
+.totalHero .hero-text h2 {
+  font-family: 'Raleway', sans-serif;
+  font-size: 2.8em;
+  font-weight: 700;
+  letter-spacing: 1px;
+}
+
+
+.totalHero .hero-text .subtext {
+  padding-top: 10px;
+  font-family: 'Roboto', sans-serif;
+}
+
+.totalHero .hero-text .buttonHero {
+  height: 50px;
+  width: 160px;
+  background-color: rgba(0, 0, 0, 0);
+  border-radius: 10px;
+  border-style: solid;
+  border-width: 2px;
+  border-color: white;
+  margin-top: 40px;
+
+}
+
+.totalHero .hero-text .aButton {
+  font-family: 'Roboto', sans-serif;
+  font-size: 1.3em;
+  color: white;
+  margin: auto;
+}
+
+.totalHero .hero-text a:hover {
+  transform: scale(0.98);
+}
+
+
+
 
 .threeBoxLayout {
   height: 100vh;
-  
+  background-image: url(/images/halfBlue2.png);
+	background-position: center;
+	background-repeat: no-repeat;
+  background-size: cover; 
 }
 
 .threeBoxLayout .mainHeading {
@@ -92,9 +141,10 @@ a {
     padding: 50px 50px ;
     margin: 0 auto 0px;
     text-align: center;
-    font-size: 58px;
-    text-transform: uppercase;
-    color: rgb(0, 0, 0);
+    font-size: 50px;
+    font-weight: 600;
+    font-family: 'Raleway', sans-serif;
+    color: rgb(53, 53, 53);
   }
   
   .threeBoxLayout .boxes {
@@ -108,95 +158,167 @@ a {
   }
   
   .threeBoxLayout .boxes .individualBoxes {
-    width: 325px;
-    margin: 10px;
-    background: rgb(235, 235, 235);
-    border-radius: 6px;
+    width: 300px;
+    margin: 20px 30px;
+    background: rgb(255, 255, 255);
+    border-radius: 10px;
     box-shadow: 0 1px 2px rgba(0, 0, 0, 0.07);
     padding: 25px;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.17), 0 6px 20px 0 rgba(0, 0, 0, 0.17);
   }
   
   .threeBoxLayout .boxes .individualBoxes .individualBoxesImage {
-    width: 170px;
-    height: 170px;
-    background-color: black;
+    width: 220px;
+    height: 220px;
+    padding: 10px;
     margin: 0 auto;
     margin-bottom: 10px;
   }
+
+  .threeBoxLayout .boxes .individualBoxes .individualBoxesImage img{
+    height: 100%;
+    width: 100%;
+    
   
-  .threeBoxLayout .boxes .individualBoxes .boxTitle {
-    color: #444;
   }
+
+
+
   
-  .threeBoxLayout .boxes .individualBoxes span {
-    font-size: 12px;
-    color: #999;
-  }
   
   .threeBoxLayout .boxes .individualBoxes p {
-    margin: 15px 0;
+    margin: 25px 0;
+    font-family: 'Roboto', sans-serif;
+    font-weight: 500;
+    font-size: 1.2em;
   }
   
-  .threeBoxLayout .boxes .individualBoxes .btn_grp {
-    display: flex;
-  }
-  
-  .threeBoxLayout .boxes .individualBoxes .btn_grp a {
-    background: #ddd;
-    display: block;
-    width: 125px;
-    margin: 0 10px;
-    padding: 10px;
-    border-radius: 6px;
-    color: #444;
-    text-transform: capitalize;
-    transition: all 0.3s ease;
-  }
-  
-  .threeBoxLayout .boxes .individualBoxes .btn_grp a:first-child:hover {
-    background: black;
-    color: #fff;
-  }
-  
-  .threeBoxLayout .boxes .individualBoxes .btn_grp a:last-child:hover {
-    background: black;
-    color: #fff;
+  .midwayContainer {
+    display: inline-block;
+    background-color: #2555E4;
+    height: 320px;
+    width: 100%;
+    
+
   }
 
-  .containerForALTERNATIVE {
-    
-    height: 100vh;
-    background-color: black;
-    display: flex;
-    flex-direction: column;
-    
-    
-}
+  .midwayContainer .midwayTextContainer {
+    margin: 80px;
+  }
 
-.alternativeBox {
-    flex: 0.5;
+  .midwayContainer .midwayTextContainer h2 {
+
+    margin: 0 auto 0px;
+    text-align: center;
+    font-size: 50px;
+    font-weight: 600;
+    font-family: 'Raleway', sans-serif;
+    color: rgb(255, 255, 255);
+  }
+
+
+  .midwayContainer .midwayTextContainer h4 {
+    margin: 0 auto 0px;
+    padding-top: 10px;
+    text-align: center;
+    font-family: 'Roboto', sans-serif;
+    font-weight: 300;
+    font-size: 1.1em;
+    color: #ffffff;
+  }
+
+
+  .meritsSection {
+    height: 450px;
+    padding: 100px 0;
+  }
+
+  .meritsContainer {
+    height: 250px;
+    width: 100%;
+    margin: 0;
     display: flex;
-    margin: 10px 20px;
+  }
+
+  .odd {
     flex-direction: row;
-    
-}
-
-.alternativeImage {
-    flex: 1;   
-    border: 3px solid rgb(255, 255, 255); 
-}
-
-.alternativeText {
-    flex: 2; 
-    border: 3px solid rgb(255, 255, 255);
-}
-
-.alternativeBox:nth-child(even){
+  }
+  
+  .even {
     flex-direction: row-reverse;
-}
+  }
+
+  .even .meritsTextContainer {
+    float: left;
+  }
+
+  .even .mySvg {
+    float: right;
+  }
+
+
+  .meritsContainer .meritsText {
+    width: 100%;
+  }
+
+  .meritsContainer .meritsSvgs {
+    width: 100%;
+  }
+
+  .meritsTextContainer {
+    margin-top: 20px;
+    width: 350px;
+    float: right;
+    padding: 0 10px;
+  }
+
+  .meritsTextContainer h3 {
+    margin: 0 auto 0px;
+    text-align: left;
+    font-size: 40px;
+    font-weight: 600;
+    font-family: 'Raleway', sans-serif;
+    margin-bottom: 10px;
+    text-transform: capitalize;
+  }
+
+  .meritsTextContainer p {
+    margin: 0 auto 0px;
+    padding-top: 10px;
+    text-align: left;
+    font-family: 'Roboto', sans-serif;
+    font-weight: 300;
+    font-size: 1.1em; 
+  }
+
+
+  .mySvg {
+    height: 100%;
+    width: 350px;
+    float: left;
+  }
+
+  .mySvg img {
+    width: 250px;
+    height: 100%;
+  }
+
+  .odd .mySvg img {
+    float: right;
+  }
+
+  .even .meritsTextContainer h3 {
+    text-align: right;
+  }
+
+  .even .meritsTextContainer p {
+    text-align: right;
+  }
+
+  
 
 .footer{
-    background: #0e0e0e;
+    background: #2c2c2c;;
     padding: 50px;
  }
  
@@ -337,9 +459,11 @@ a {
 
   
 
+  
+
 }
 
-@media (max-width: 690px){
+@media (max-width: 740px){
 
   .container {
     max-width: 98vw;
@@ -348,7 +472,9 @@ a {
     height: auto;
   }
 
-
+  .meritsSection {
+    background-color: chartreuse;
+  }
 
 
   .alternativeBox {
