--- a/style.css
+++ b/style.css
@@ -7,25 +7,22 @@
 
 body{
   color: #545454;
+  overflow-x: hidden;
 }
 
-/* width */
 ::-webkit-scrollbar {
   width: 10px;
 }
 
-/* Track */
 ::-webkit-scrollbar-track {
   background: #ffffff; 
 }
  
-/* Handle */
 ::-webkit-scrollbar-thumb {
   background: rgb(173, 173, 173); 
   border-radius: 15px;
 }
 
-/* Handle on hover */
 ::-webkit-scrollbar-thumb:hover {
   background: rgb(119, 119, 119); 
 }
@@ -219,12 +216,11 @@ a {
     background-color: #2555E4;
     height: 320px;
     width: 100%;
-    
-
   }
 
   .midwayContainer .midwayTextContainer {
     margin: 80px;
+    position: relative;
   }
 
   .midwayContainer .midwayTextContainer h2 {
@@ -236,7 +232,7 @@ a {
     font-family: 'Raleway', sans-serif;
     color: rgb(255, 255, 255);
   }
-
+  
 
   .midwayContainer .midwayTextContainer h4 {
     margin: 0 auto 0px;
@@ -462,6 +458,11 @@ a {
 
 @media (max-width: 1040px){
 
+  body{
+    color: #545454;
+    overflow-x: hidden;
+  }
+
   .container {
     max-width: 90vw;
     margin: 0 auto;
@@ -493,16 +494,42 @@ a {
 
 @media (max-width: 740px){
 
+  body{
+    color: #545454;
+    overflow-x: hidden;
+  }
+
   .container {
     max-width: 98vw;
     margin: 0 auto;
-    padding: 0 10px;
-    height: auto;
+    padding: 0;
+    height: 100%;
   }
 
-  .meritsSection {
-    background-color: chartreuse;
+  .hero-text{
+    padding-left: 0;
   }
+
+  .totalHero .hero-text h2 {
+    font-size: 2.2em;
+    text-align: center;
+  }
+  
+  
+  .totalHero .hero-text .subtext {
+    padding-top: 15px;
+    padding-left: 0px;
+    text-align: center;
+  }
+
+  .totalHero .hero-text .buttonHero {
+    margin: 50px auto 0;
+  }
+
+  .totalHero .hero-text {
+    padding-left: 0;
+  }
+
 
   .threeBoxLayout {
     background-image: url(/images/halfBlueCurve.png);
@@ -512,6 +539,24 @@ a {
   }
 
 
+  .midwayContainer {
+    height: 400px;
+    
+  }
+
+  .midwayContainer .midwayTextContainer {
+    margin: 100px 50px 50px;
+  }
+
+  .midwayContainer .midwayTextContainer h2 {
+    font-size: 40px;
+  } 
+  
+
+  .midwayContainer .midwayTextContainer h4 {
+    font-weight: 200;
+    font-size: 1em;
+  }
 
 
 
@@ -521,7 +566,66 @@ a {
     height: fit-content;
   }
 
+  .meritsSection {
+    height: 600px;
+  
+  }
 
+  .meritsContainer {
+    height: 100%;
+    width: 100%;
+    margin: 0;
+    display: flex;
+    justify-content: space-between;
+  }
+
+
+  .odd {
+    flex-direction: column;
+  }
+  
+  .even {
+    flex-direction: column;
+  }
+
+  .even .meritsTextContainer {
+    float: none;
+    margin: auto;
+  }
+
+  .odd .meritsTextContainer {
+    float: none;
+    margin: auto;
+  }
+
+  .even .meritsTextContainer h3 {
+    text-align: center;
+  }
+
+  .odd .meritsTextContainer h3 {
+    text-align: center;
+  }
+
+  .even .meritsTextContainer p {
+    text-align: center;
+  }
+
+  .odd .meritsTextContainer p {
+    text-align: center;
+  }
+
+  .mySvg {
+    float: none;
+    width: fit-content;
+    margin: auto;
+  }
+
+  .even .mySvg {
+    float: none;
+    
+  }
+
+  .threeBoxLayout
 
 
 }
