--- a/style.css
+++ b/style.css
@@ -517,8 +517,7 @@ a {
   
   
   .totalHero .hero-text .subtext {
-    padding-top: 15px;
-    padding-left: 0px;
+    padding-top: 15px 10px 0;
     text-align: center;
   }
 
